js/js.translator/testData/incremental/invalidation/fakeOverrideInheritanceWithIntraModuleInliner/lib1/C.0.kt
abstract class AbstractClassC : AbstractClassB() {
    inline fun funC() = "c-0 ${funB()}"
}
